--- a/control-plane-crossplane/install/crossplane-helm.yaml
+++ b/control-plane-crossplane/install/crossplane-helm.yaml
@@ -18,15 +18,16 @@ spec:
   chart:
     spec:
       chart: crossplane
-      version: 1.18.0
+      version: 2.0.0-rc.1
       sourceRef:
         kind: HelmRepository
         name: crossplane-stable
         namespace: flux-system
   targetNamespace: crossplane-system
-  createNamespace: true
-  values:
-    replicas: 1
-    args:
-      - --debug
-      - --enable-management-policies
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
