--- a/control-plane-crossplane/platform-services/vs-landing-zone-xrd.yaml
+++ b/control-plane-crossplane/platform-services/vs-landing-zone-xrd.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.crossplane.io/v2alpha1
+apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
   name: valuestreamlandingzones.platform.tornado-demo.io
