--- a/tasks/test-and-debug.yaml
+++ b/tasks/test-and-debug.yaml
@@ -56,7 +56,6 @@ tasks:
     desc: "Get credentials for GKE clusters"
     vars:
       CLUSTER: '{{default "control-plane" .CLUSTER}}'
-      PROJECT_ID: '{{default "apps-398909" .PROJECT_ID}}'
       ZONE: '{{default "australia-southeast1-a" .ZONE}}'
     cmds:
       - gcloud container clusters get-credentials {{.CLUSTER}} --zone={{.ZONE}} --project={{.PROJECT_ID}}
@@ -66,7 +65,6 @@ tasks:
   get-all-gke-credentials:
     desc: "Get credentials for all GKE clusters"
     vars:
-      PROJECT_ID: '{{default "apps-398909" .PROJECT_ID}}'
       ZONE: '{{default "australia-southeast1-a" .ZONE}}'
     cmds:
       - gcloud container clusters get-credentials control-plane --zone={{.ZONE}} --project={{.PROJECT_ID}}
@@ -87,3 +85,5 @@ tasks:
       - echo "kubectl --context kind-kind-test-cluster annotate kustomization crossplane-composite-resources -n flux-system reconcile.fluxcd.io/requestedAt=\$(date '+%Y-%m-%dT%H:%M:%S%z') --overwrite"
       - echo "kubectl --context kind-kind-test-cluster patch kustomization crossplane-composite-resources -n flux-system -p '{"spec":{"suspend":true}}' --type=merge"
       - echo "kubectl --context kind-kind-test-cluster patch kustomization crossplane-composite-resources -n flux-system -p '{"spec":{"suspend":false}}' --type=merge"
+      - echo "gh run list --repo olga-mir/playground --limit 10"
+      - echo "gh run view 17002852908 --repo olga-mir/playground"
