--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -12,7 +12,6 @@ permissions:
   contents: read
   issues: write
   pull-requests: write
-  id-token: write
 
 jobs:
   bootstrap-flux:
@@ -29,11 +28,25 @@ jobs:
     - name: Extract cluster info from payload
       id: cluster-info
       run: |
-        echo "cluster_name=${{ github.event.inputs.cluster_name || github.event.client_payload.cluster_name }}" >> $GITHUB_OUTPUT
-        echo "region=${{ github.event.inputs.region || github.event.client_payload.region }}" >> $GITHUB_OUTPUT
-        echo "project_id=${{ github.event.inputs.project_id || github.event.client_payload.project_id }}" >> $GITHUB_OUTPUT
-        echo "cluster_type=${{ github.event.inputs.cluster_type || github.event.client_payload.cluster_type }}" >> $GITHUB_OUTPUT
-        echo "Event payload: ${{ toJSON(github.event.client_payload) }}"
+        # Parse cluster info from the message field
+        MESSAGE="${{ github.event.client_payload.message }}"
+        echo "Message: $MESSAGE"
+
+        # Extract cluster name and type from message like "GKECluster/control-plane-cluster created"
+        if [[ "$MESSAGE" == *"control-plane"* ]]; then
+          echo "cluster_name=gke-control-plane-cluster" >> $GITHUB_OUTPUT
+          echo "cluster_type=control-plane" >> $GITHUB_OUTPUT
+        elif [[ "$MESSAGE" == *"apps-dev"* ]]; then
+          echo "cluster_name=gke-apps-dev-cluster" >> $GITHUB_OUTPUT
+          echo "cluster_type=apps-dev" >> $GITHUB_OUTPUT
+        else
+          echo "cluster_name=unknown" >> $GITHUB_OUTPUT
+          echo "cluster_type=unknown" >> $GITHUB_OUTPUT
+        fi
+
+        echo "region=australia-southeast1" >> $GITHUB_OUTPUT
+
+        # Project ID will be available from WIF auth context
 
     - name: Setup Flux CLI
       uses: fluxcd/flux2/action@main
@@ -51,7 +64,6 @@ jobs:
       id: get-credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
-        project_id: ${{ steps.cluster-info.outputs.project_id }}
         cluster_name: ${{ steps.cluster-info.outputs.cluster_name }}
         location: ${{ steps.cluster-info.outputs.region }}
 
@@ -61,7 +73,6 @@ jobs:
         kubectl get namespace flux-system >/dev/null 2>&1 || kubectl create namespace flux-system
         # Always create or update the ConfigMap
         kubectl create configmap cluster-config -n flux-system \
-          --from-literal=PROJECT_ID="${{ steps.cluster-info.outputs.project_id }}" \
           --from-literal=REGION="${{ steps.cluster-info.outputs.region }}" \
           --from-literal=CLUSTER_NAME="${{ steps.cluster-info.outputs.cluster_name }}" \
           --from-literal=CLUSTER_TYPE="${{ steps.cluster-info.outputs.cluster_type }}" \
