--- a/clusters/control-plane/crossplane-source.yaml
+++ b/clusters/control-plane/crossplane-source.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 1m
   ref:
-    branch: base-refactor
+    branch: develop
   url: https://github.com/olga-mir/playground
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
