--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -49,14 +49,15 @@ jobs:
             echo "cluster_name=unknown" >> $GITHUB_OUTPUT
             echo "cluster_type=unknown" >> $GITHUB_OUTPUT
           fi
-          echo "should_proceed=true" >> $GITHUB_OUTPUT
         else
           echo "Not a GKE cluster event, skipping bootstrap"
-          echo "should_proceed=false" >> $GITHUB_OUTPUT
           echo "cluster_name=unknown" >> $GITHUB_OUTPUT
           echo "cluster_type=unknown" >> $GITHUB_OUTPUT
         fi
 
+        # temp - For now proceed even if flux event does not show ready.
+        # actual cluster might be already in working state
+        echo "should_proceed=true" >> $GITHUB_OUTPUT
         echo "region=australia-southeast1" >> $GITHUB_OUTPUT
 
         # Project ID will be available from WIF auth context
