--- a/platform-products/networking/kgateway/helm/kgateway-crds-release.yaml
+++ b/platform-products/networking/kgateway/helm/kgateway-crds-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kgateway-crds
-      version: "v2.1.0-main"
+      version: "v2.0.4"
       sourceRef:
         kind: HelmRepository
         name: kgateway-helm-repo
