--- a/platform-products/networking/kgateway/helm/kgateway-release.yaml
+++ b/platform-products/networking/kgateway/helm/kgateway-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: kgateway
-      version: "v2.1.0-main"
+      version: "v2.0.4"
       sourceRef:
         kind: HelmRepository
         name: kgateway-helm-repo
