--- a/platform-tenants/team-alpha/kustomization.yaml
+++ b/platform-tenants/team-alpha/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 # Team Alpha applications will go here
 # Example: web applications, microservices, etc.
 
-resources: []
+resources:
+  - landing-zone-claim.yaml
