--- a/.github/workflows/crossplane-platform-validation.yaml
+++ b/.github/workflows/crossplane-platform-validation.yaml
@@ -1,14 +1,15 @@
 name: Crossplane Platform Validation
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-    paths:
-      - 'control-plane-crossplane/compositions/**/*.yaml'
-      - 'control-plane-crossplane/functions/**/*.yaml'
-      - 'control-plane-crossplane/providers/**/*.yaml'
-      - 'control-plane-crossplane/provider-configs/**/*.yaml'
-      - 'control-plane-crossplane/environment-configs/**/*.yaml'
+  worflow_dispatch:
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  #   paths:
+  #     - 'control-plane-crossplane/compositions/**/*.yaml'
+  #     - 'control-plane-crossplane/functions/**/*.yaml'
+  #     - 'control-plane-crossplane/providers/**/*.yaml'
+  #     - 'control-plane-crossplane/provider-configs/**/*.yaml'
+  #     - 'control-plane-crossplane/environment-configs/**/*.yaml'
 
 jobs:
   validate-platform:
