--- a/.github/workflows/crossplane-platform-validation.yaml
+++ b/.github/workflows/crossplane-platform-validation.yaml
@@ -1,7 +1,7 @@
 name: Crossplane Platform Validation
 
-on:
-  worflow_dispatch:
+on: workflow_dispatch
+
   # pull_request:
   #   types: [opened, synchronize, reopened]
   #   paths:
