--- a/control-plane-crossplane/providers/providers.yaml
+++ b/control-plane-crossplane/providers/providers.yaml
@@ -19,3 +19,10 @@ metadata:
   name: provider-kubernetes
 spec:
   package: xpkg.crossplane.io/crossplane-contrib/provider-kubernetes:v0.18.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-gcp-cloudrun
+spec:
+  package: xpkg.upbound.io/upbound/provider-gcp-cloudrun:v1.14.0
