--- a/control-plane-crossplane/compositions/workload-cluster-xrd.yaml
+++ b/control-plane-crossplane/compositions/workload-cluster-xrd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xworkloadclusters.platform.tornado-demo.io
+  name: workloadclusters.platform.tornado-demo.io
 spec:
   group: platform.tornado-demo.io
   names:
