--- a/control-plane-crossplane/workload-clusters/apps-dev-cluster.yaml
+++ b/control-plane-crossplane/workload-clusters/apps-dev-cluster.yaml
@@ -2,7 +2,7 @@ apiVersion: platform.tornado-demo.io/v1alpha1
 kind: WorkloadCluster
 metadata:
   name: apps-dev-cluster
-  namespace: default
+  namespace: apps-dev-workload
 spec:
   parameters:
     clusterName: "${GKE_APPS_DEV_CLUSTER}"
@@ -14,4 +14,4 @@ spec:
     machineType: "e2-medium"
     minNodes: 2
     maxNodes: 5
-  writeConnectionSecretsToNamespace: default
+  writeConnectionSecretsToNamespace: apps-dev-workload
