--- a/workload-cluster-bootstrap/apps-dev/flux-system.yaml
+++ b/workload-cluster-bootstrap/apps-dev/flux-system.yaml
@@ -1,4 +1,9 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: flux-system
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
@@ -35,3 +40,27 @@ spec:
   sourceRef:
     kind: GitRepository
     name: platform-products-config
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: platform-tenants-config
+  namespace: flux-system
+spec:
+  interval: 1m
+  ref:
+    branch: develop
+  url: https://github.com/olga-mir/playground
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: platform-tenants
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: "./platform-tenants"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: platform-tenants-config
