--- a/bootstrap/kind/flux/crossplane-source.yaml
+++ b/bootstrap/kind/flux/crossplane-source.yaml
@@ -66,8 +66,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: crossplane-config
-  dependsOn:
-    - name: crossplane-providers-health
+  #dependsOn:
+  #  - name: crossplane-providers-health
   postBuild:
     substituteFrom:
       - kind: ConfigMap
