--- a/control-plane-crossplane/compositions/workload-cluster-xrd.yaml
+++ b/control-plane-crossplane/compositions/workload-cluster-xrd.yaml
@@ -7,6 +7,9 @@ spec:
   names:
     kind: WorkloadCluster
     plural: workloadclusters
+  claimNames:
+    kind: WorkloadClusterClaim
+    plural: workloadclusterclaims
   connectionSecretKeys:
     - kubeconfig
   versions:
