--- a/bootstrap/kind/crossplane/base/compositions/gke-cluster-xrd.yaml
+++ b/bootstrap/kind/crossplane/base/compositions/gke-cluster-xrd.yaml
@@ -7,6 +7,9 @@ spec:
   names:
     kind: GKECluster
     plural: gkeclusters
+  claimNames:
+    kind: GKEClusterClaim
+    plural: gkeclusterclaims
   versions:
   - name: v1alpha1
     served: true
