--- a/bootstrap/kind/crossplane/base/compositions/kustomization.yaml
+++ b/bootstrap/kind/crossplane/base/compositions/kustomization.yaml
@@ -3,5 +3,4 @@ kind: Kustomization
 
 resources:
   - gke-cluster-xrd.yaml
-  - control-plane-composition.yaml
-  - workload-composition.yaml
+  - gke-cluster-composition.yaml
