--- a/clusters/control-plane/apps-dev-alert.yaml
+++ b/clusters/control-plane/apps-dev-alert.yaml
@@ -2,7 +2,7 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
-  name: github-dispatch
+  name: github-dispatch-apps-dev
   namespace: flux-system
 spec:
   type: githubdispatch
@@ -13,16 +13,16 @@ spec:
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
-  name: github-dispatch-control-plane-cluster
+  name: github-dispatch-apps-dev-cluster
   namespace: flux-system
 spec:
   providerRef:
-    name: github-dispatch
+    name: github-dispatch-apps-dev
   eventSeverity: info
   eventSources:
     - kind: Kustomization
-      name: control-plane-cluster
+      name: apps-dev-cluster
       namespace: flux-system
   eventMetadata:
     project: "${PROJECT_ID}"
-    cluster: "control-plane"
+    cluster: "apps-dev"
