--- a/bootstrap/kind/crossplane/kustomization.yaml
+++ b/bootstrap/kind/crossplane/kustomization.yaml
@@ -2,11 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - base/namespaces
-  - base/rbac
-  - base/functions
-  - base/providers
-  - base/compositions
-  - secrets
+  #- base/rbac
+  #- base/functions
+  #- base/providers
+  #- base/compositions
   - providerconfigs
   - clusters
+  # TODO - this is wild - why do we need base and folders in the same level??
